<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FloatingContextMenuTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="menu_delete_option">Delete</string>
    <string name="menu_edit_option">Edit</string>
    <string name="menu_view_option">View</string>
    <string name="menu_other_option">Other</string>
    
    <string name="menu_frag_option">FragAction</string>

</resources>