<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_view"
        android:orderInCategory="100"
        android:title="@string/menu_view_option"/>
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/menu_edit_option"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/menu_delete_option"/>
    <item
        android:id="@+id/action_other"
        android:orderInCategory="100"
        android:title="@string/menu_other_option"/>

</menu>